:bug: Fix hp layout on small screens

--- a/css/main.scss
+++ b/css/main.scss
@@ -10,8 +10,8 @@ html {
 #top {
     background-image: url("/images/p-az.png");
     background-repeat: no-repeat;
-    background-position: calc(100% + 140px) calc(100% + 140px); 
-    background-size: contain; /* Resize the background image to cover the entire container */
+    background-position: calc(100% + 140px) calc(100% + 140px);
+    background-size: contain;
 }
 
 // Our variables
@@ -132,6 +132,16 @@ body {
 
     .top-5 {
         font-size: 18px;
+    }
+
+    .top-6 {
+        font-size: 16px;
+    }
+
+    #top {
+        background-size: 200px;
+        background-position: calc(100% + 90px) calc(100% + 90px);
+
     }
 }
 
